--- a/src/index.css
+++ b/src/index.css
@@ -508,6 +508,10 @@ img {
   background-color: #edf2f7;
 }
 
+.rounded-none {
+  border-radius: 0;
+}
+
 .rounded {
   border-radius: 0.25rem;
 }
@@ -536,12 +540,16 @@ img {
   justify-content: center;
 }
 
-.flex-shrink-0 {
-  flex-shrink: 0;
+.flex-1 {
+  flex: 1 1 0%;
 }
 
-.font-sans {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+.flex-grow {
+  flex-grow: 1;
+}
+
+.flex-shrink-0 {
+  flex-shrink: 0;
 }
 
 .font-medium {
@@ -560,20 +568,8 @@ img {
   height: 3rem;
 }
 
-.h-24 {
-  height: 6rem;
-}
-
 .h-full {
   height: 100%;
-}
-
-.h-screen {
-  height: 100vh;
-}
-
-.m-2 {
-  margin: 0.5rem;
 }
 
 .mx-auto {
@@ -581,8 +577,17 @@ img {
   margin-right: auto;
 }
 
+.-mx-2 {
+  margin-left: -0.5rem;
+  margin-right: -0.5rem;
+}
+
 .mr-2 {
   margin-right: 0.5rem;
+}
+
+.mr-4 {
+  margin-right: 1rem;
 }
 
 .mt-auto {
@@ -601,8 +606,8 @@ img {
   overflow: hidden;
 }
 
-.overflow-x-hidden {
-  overflow-x: hidden;
+.p-2 {
+  padding: 0.5rem;
 }
 
 .p-4 {
@@ -618,16 +623,16 @@ img {
   padding-top: 4rem;
 }
 
-.pt-32 {
-  padding-top: 8rem;
-}
-
 .fixed {
   position: fixed;
 }
 
 .relative {
   position: relative;
+}
+
+.top-0 {
+  top: 0;
 }
 
 .shadow {
@@ -658,21 +663,20 @@ img {
   font-size: 0.75rem;
 }
 
+.text-sm {
+  font-size: 0.875rem;
+}
+
+.text-base {
+  font-size: 1rem;
+}
+
 .text-lg {
   font-size: 1.125rem;
 }
 
-.text-4xl {
-  font-size: 2.25rem;
-}
-
 .underline {
   text-decoration: underline;
-}
-
-.antialiased {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 .break-words {
@@ -689,12 +693,12 @@ img {
   width: 2.5rem;
 }
 
-.w-full {
-  width: 100%;
+.w-1\/2 {
+  width: 50%;
 }
 
-.w-screen {
-  width: 100vw;
+.w-full {
+  width: 100%;
 }
 
 .z-10 {
@@ -711,10 +715,37 @@ img {
   transform: translateY(-1rem);
 }
 
+html {
+  overflow-y: scroll;
+  overflow-x: hidden;
+  height: 100%;
+}
+
+body {
+  height: 100%;
+}
+
+#root {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+  max-width: 100%;
+  position: relative;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+}
+
 @media (min-width: 768px) {
 
   .md\:flex-col {
     flex-direction: column;
+  }
+
+  .md\:h-24 {
+    height: 6rem;
   }
 
   .md\:mr-0 {
@@ -723,6 +754,18 @@ img {
 
   .md\:mb-2 {
     margin-bottom: 0.5rem;
+  }
+
+  .md\:pt-32 {
+    padding-top: 8rem;
+  }
+
+  .md\:text-lg {
+    font-size: 1.125rem;
+  }
+
+  .md\:text-4xl {
+    font-size: 2.25rem;
   }
 
   .md\:w-64 {
